--- a/frontend/src/Components/AdminSidebar.css
+++ b/frontend/src/Components/AdminSidebar.css
@@ -74,7 +74,7 @@
   
   @media screen and (max-width: 1350px) {
     .sidebarcont {
-      background-color: #004aad;
+      /* background-color: #004aad; */
     }
   
     .sidebar {
