--- a/frontend/src/Components/AdminSidebar.css
+++ b/frontend/src/Components/AdminSidebar.css
@@ -61,13 +61,13 @@
     .sidebar {
       width: 100%;
       height: 10vh;
-      position: none;
+      /* position: none; */
       padding-top: 5%;
     }
   
     .adminsidebar {
       flex-direction: row;
-      justify-content: space-evenly;
+      /* justify-content: space-evenly; */
       /* align-items: center; */
     }
   }
@@ -78,7 +78,7 @@
     }
   
     .sidebar {
-      margin-top: 3%;
+      /* margin-top: 3%; */
     }
   }
   
@@ -90,7 +90,9 @@
     }
   
     .sidebarcont {
-      background-color: #004aad;
+      /* background-color: #004aad; */
     }
+
+   
   }
   
